Fix holding jump

--- a/testing grounds/style.css
+++ b/testing grounds/style.css
@@ -23,3 +23,7 @@ img {
 h1 {
   color: whitesmoke;
 }
+
+canvas {
+  border-bottom: 5px solid white;
+}
